test/log/shift/vcsr_i_i16_m.txt
vcsr_i_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcsr_i_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcsr_i_i16_m.c:30:6: warning: no previous prototype for 'vcsr_i_i16_m_golden' [-Wmissing-prototypes]
   30 | void vcsr_i_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,uint32_t imm,int16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~
vcsr_i_i16_m.c: In function 'vcsr_i_i16_m_golden':
vcsr_i_i16_m.c:30:50: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vcsr_i_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,uint32_t imm,int16_t *exp_result) {
      |                                         ~~~~~~~~~^~~~~~~
vcsr_i_i16_m.c:30:67: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vcsr_i_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *a,uint32_t imm,int16_t *exp_result) {
      |                                                          ~~~~~~~~~^
vcsr_i_i16_m.c: In function 'main':
vcsr_i_i16_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vcsr_i_i16_m.c:61:40: error: incompatible type for argument 3 of 'vcsr_i_i16_m'
   61 |     result = vcsr_i_i16_m(mask,maskoff,a,0);
      |                                        ^
      |                                        |
      |                                        int16x32_t
In file included from vcsr_i_i16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1690:1: note: expected 'uint32_t' {aka 'const long unsigned int'} but argument is of type 'int16x32_t'
 1690 | __RUGRATS_I_OP (csr, i, int, uint, 16, 32, 32)
      | ^~~~~~~~~~~~~~
vcsr_i_i16_m.c:61:14: error: too many arguments to function 'vcsr_i_i16_m'
   61 |     result = vcsr_i_i16_m(mask,maskoff,a,0);
      |              ^~~~~~~~~~~~
In file included from vcsr_i_i16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1690:1: note: declared here
 1690 | __RUGRATS_I_OP (csr, i, int, uint, 16, 32, 32)
      | ^~~~~~~~~~~~~~
vcsr_i_i16_m.c:43:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   43 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcsr_i_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcsr_i_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcsr_i_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcsr_i_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed